# tontopiler

./: .gitignore  CMakeLists.txt  README.md  SymbolTable.cpp  SymbolTable.h  lexer.l  parser.y  teste.tonto  token.h
examples/CarExample/src/: car.tonto  car_erro_sintatico.tonto
examples/Compiladores_UFERSA/Pizzaria_Model/src/: Pizzaria.tonto
examples/FoodAllergyExample/src/: alergiaalimentar.tonto
examples/TDAHExample/src/: TDAH.tonto
src/: Logger.cpp  Logger.h  SymbolTable.cpp  SymbolTable.h  TUI.cpp  TUI.h  token.h
